# FbxExporter

./: .gitignore  Readme.md
FbxExporter/Assets/: FbxExporterPackaging.cs
FbxExporter/Assets/Tests/: BlendShape.fbx
FbxExporter/Assets/UTJ/FbxExporter/Editor/: FbxExporterWindow.cs
FbxExporter/Assets/UTJ/FbxExporter/Scripts/: FbxExporter.cs  FbxExporter_impl.cs  PinnedArray.cs
Plugin/: CMakeLists.txt  FbxExporterCore.sln  FbxExporterCore.vcxproj  MeshUtils.vcxproj  build.bat
Plugin/FbxExporter/: CMakeLists.txt  FbxExporter.cpp  FbxExporter.h  fbxeContext.cpp  fbxeContext.h  fbxeUtils.h  pch.h
Plugin/MeshUtils/: MeshUtils.cpp  MeshUtils.h  muMath.h  muSIMDConfig.h
Plugin/Test/: CMakeLists.txt  Test.vcxproj  Test.vcxproj.filters  TestFbxExporter.cpp
Plugin/cmake/: FindFBX.cmake  ISPC.cmake
